# no-slop-harness

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVLOG.md  Engineering_Intent_Framework.md  LICENSE  OPTIMIZATION_REPORT.md  README.md  RULES.md  SECURITY.md  harness.example.toml  pyproject.toml  requirements.txt
.agents/skills/testing-harness/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
.hermes/artifacts/: Engineering_Intent_Framework.md
.hermes/artifacts/docs/: CODE_REVIEW.md
docs/: ARCHITECTURE.md  CODE_REVIEW.md
examples/: demo.py
src/harness/: __init__.py  agents.py  cli.py  client.py  config.py  context.py  executor.py  git_isolation.py  orchestrator.py  schemas.py  tools.py
src/no_slop_harness/: __init__.py  __main__.py  advanced_metrics.py  ast_editor.py  async_orchestrator.py  cli.py  config.py  constrained.py  dag.py  errors.py  llm_client.py  logging_config.py  metrics.py  orchestrator.py  pipeline_scheduler.py  plugin.py  rag.py  runner.py  sandbox.py  schemas.py  sdlc.py  tla_bridge.py  verifier.py  worktree.py
src/no_slop_harness/agents/: __init__.py  coordinator.py  implementor.py  verifier.py
src/no_slop_harness/prompts/: coordinator.txt  implementor.txt  verifier.txt
src/no_slop_harness/providers/: __init__.py  openai_compatible.py
tests/: conftest.py  test_advanced_metrics.py  test_agents.py  test_agents_extra.py  test_ast_editor.py  test_async_orchestrator.py  test_cli.py  test_config.py  test_constrained.py  test_constrained_extra.py  test_context.py  test_coordinator.py  test_coverage_gaps.py  test_dag.py  test_errors.py  test_executor.py  test_final_coverage.py  test_git_isolation.py  test_integration.py  test_llm_client.py  test_logging_config.py  test_metrics.py  test_openai_provider.py  test_orchestrator.py  test_plugin.py  test_rag.py  test_runner.py  test_sandbox.py  test_scheduler.py  test_schemas.py  test_sdlc.py  test_tla_bridge.py  test_tools.py  test_verifier.py  test_worktree.py
