[project]
name = "no-slop-harness"
version = "0.1.0"
description = "Deterministic, local-first LLM orchestration framework implementing the CIV pattern"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
server = [
    "vllm>=0.8",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
